# NuMeriQsHackathon

./: .gitignore  README.md  enviroment.sh
Examples/000/CPP/Problem/: CMakeLists.txt  build.sh  job_scorep.sh  matmul.cpp
Examples/000/CPP/Solution/: CMakeLists.txt  job_vtune.sh  matmul.cpp
Examples/000/Fort/Problem/: build.sh  job_perf.sh  matmul.f90
Examples/000/Fort/Solution/: Makefile  job_vtune.sh  matmul.f90  matmul.f90.backup
Examples/001/CPP/Problem/: job_vtune.sh  mandelbrot_omp.cpp
Examples/001/CPP/Solution/: CMakeLists.txt  build.sh  job_scorep.sh  mandelbrot_omp.cpp
Examples/001/Fort/Problem/: Makefile  job_scorep.sh  mandelbrot_omp.f90
Examples/001/Fort/Solution/: Makefile  build.sh  job_perf.sh  job_vtune.sh  mandelbrot_omp.f90  scorep.filter
Examples/002/CPP/Problem/: job_perf.sh  job_scorep.sh  mandelbrot_mpi.cpp
Examples/002/CPP/Solution/: CMakeLists.txt  build.sh  job_scorep.sh  job_vtune.sh  mandelbrot_mpi.cpp
Examples/002/Fort/Problem/: Makefile  build.sh  mandelbrot_mpi.f90
Examples/002/Fort/Solution/: job_scorep.sh  job_vtune.sh  mandelbrot_mpi.f90
Examples/003/CPP/Problem/: pi_cal.cpp
Examples/003/CPP/Solution/: job_vtune.sh  pi_cal.cpp
Examples/003/CPP/problem2d/: build.sh  halo_exchange.cpp
Examples/003/CPP/solution2d/: halo_exchange.cpp
Examples/003/Fort/Problem/: Makefile  job_perf.sh  job_vtune.sh
Examples/003/Fort/Solution/: build.sh  halo_exchange.f90  job_scorep.sh  pi_cal.cpp  pi_cal.f90
Examples/004/CPP/Problem/: CMakeLists.txt  build.sh  halo_exchange.cpp
Examples/004/CPP/Solution/: halo_exchange.cpp  job_scorep.sh
(+21 files in other folders)
